--- a/src/app/post-list/post-list.component.html
+++ b/src/app/post-list/post-list.component.html
@@ -1,3 +1,4 @@
-<p>
-  post-list works!
-</p>
+<div *ngFor="let post of postList | async" (click)="goToDetailPage(post)">
+    <h3><em>{{post.title}}</em>in {{post.category}}</h3>
+</div>
+<button (click)="addPost()">Add</button>
